fix spacing

--- a/microsite/final/css/header.css
+++ b/microsite/final/css/header.css
@@ -51,7 +51,7 @@ header {
 
 .introduction {
     max-width: 800px;
-    margin: 2rem auto;
+    margin: 1rem auto;
     text-align: center;
 }
 
